--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-audio-recorder-player": "^3.6.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
