--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-audio-recorder-player": "^3.6.10"
+    "react-native-audio-recorder-player": "^3.6.10",
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
